@@ -24,6 +24,8 @@ Unreleased Version 2.3.0-pre
  * Fix: Default MyPaint brushes to use synchronized smudging, since many of them only work properly with it turned on.
  * Fix: Select proper file type and remove the extension on the name input field when saving on Android and the browser.
  * Fix: Make color picker color dialog use the current foreground color when manually adding a color. Thanks Phoneme for reporting.
+ * Fix: Show an error message on Linux under Wayland when attempting to pick a color from the screen with a hint to use Xorg instead. Thanks Meru and Phoneme for reporting.
+ * Fix: Remove pick from screen button in the browser, since it doesn't work there.
 
 2025-10-18 Version 2.3.0-beta.4
  * Fix: Unpremultiply alpha values when exporting to animated WEBP so that partially transparent pixels come out looking correct.
